--- a/about.html
+++ b/about.html
@@ -6,13 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>About MDHL</title>
     <meta name="description" content="About page for the MDHL website" />
-    <!-- <link rel="stylesheet" href="./syles.css" /> -->
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
     <header>
-      <figure>
-        <img src="./assets/logomdhl.png" alt="Mighty Ducks Logo" width="100" />
-      </figure>
+      <figure></figure>
       <h1>Mighty Ducks Hockey League</h1>
       <nav>
         <a href="./">Home</a>
@@ -21,13 +19,11 @@
       </nav>
     </header>
     <main>
-      <aside>
-        <figure>
-          <img src="./assets/hockey2.jpg" alt="Mighty Ducks Hockey League" width="300" />
-        </figure>
-      </aside>
-      <section>
+      <div>
         <h2>Mission</h2>
+        <img src="./assets/logomdhl.png" alt="Mighty Ducks Logo" width="100" />
+      </div>
+      <section>
         <p>
           To support young athletes living Chicago's northside neighborhood, who have an interest in learning and playing soccer, with opportunities to learn and practice skills related to the game of
           hockey, specifically those skills around team cooperation and good sportsmanship
