--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mighty Ducks Hockey League</title>
     <meta name="description" content="Contact us - MDHL website" />
-    <!-- <link rel="stylesheet" href="./syles.css" /> -->
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
     <header>
