--- a/index.html
+++ b/index.html
@@ -6,28 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mighty Ducks Hockey League</title>
     <meta name="description" content="Homepage for the MDHL website" />
-    <link rel="stylesheet" href="./styles.css" />
+    <link rel="stylesheet" type="text/css" href="./styles.css" />
   </head>
   <body>
     <header>
       <h1>Mighty Ducks Hockey League</h1>
-      <figure>
-        <img src="./assets/logomdhl.png" alt="Mighty Ducks Logo" width="100" />
-      </figure>
-      <nav>
-        <a href="./">Home</a>
-        <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">Contact</a>
-      </nav>
     </header>
+    <nav>
+      <a href="./">Home</a>
+      <a href="./about.html">About MDHL</a>
+      <a href="./contact.html">Contact</a>
+    </nav>
     <main>
-      <aside>
+      <!-- <aside>
         <figure>
           <img src="./assets/hockey1.jpg" alt="Mighty Ducks Hockey League" width="300" />
         </figure>
-      </aside>
-      <section>
+      </aside> -->
+      <div>
         <h2>Upcoming Events</h2>
+        <img src="./assets/logomdhl.png" alt="Mighty Ducks Logo" width="100" />
+      </div>
+      <section>
         <h3>August 4</h3>
         <p>MDSL Fundraiser</p>
         <br />
@@ -38,8 +38,5 @@
         <p>First Game of the Season (Check Game Schedule for details)</p>
       </section>
     </main>
-    <!-- <footer>
-      <p>Mighty Ducks Hockey League. <i>All rights reserved</i></p>
-    </footer> -->
   </body>
 </html>
