--- a/contact.html
+++ b/contact.html
@@ -10,32 +10,30 @@
   </head>
   <body>
     <header>
-      <figure>
-        <img src="./assets/logomdhl.png" alt="Mighty Ducks Logo" width="100" />
-      </figure>
-      <h1>Mighty Ducks Hockey League</h1>
+      <div class="banner">
+        <h1>Mighty Ducks Hockey League</h1>
+      </div>
+      <div class="subtitle">
+        <h2>Contact</h2>
+        <figure>
+          <img src="./assets/logomdhl.png" alt="Mighty Ducks Logo" width="150" />
+        </figure>
+      </div>
+    </header>
+    <aside>
       <nav>
         <a href="./">Home</a>
         <a href="./about.html">About MDHL</a>
-        <a href="./contact.html">Contact</a>
+        <a class="active" href="./contact.html">Contact</a>
       </nav>
-    </header>
+    </aside>
     <main>
-      <aside>
-        <figure>
-          <img src="./assets/hockey3.jpg" alt="Mighty Ducks Hockey League" width="300" />
-        </figure>
-      </aside>
       <section>
-        <div>
+        <article>
           <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
-          <br />
           <p>We'll reply to your email as soon as we can.</p>
-        </div>
+        </article>
       </section>
     </main>
-    <!-- <footer>
-      <p>Mighty Ducks Hockey League. <i>All rights reserved</i></p>
-    </footer> -->
   </body>
 </html>
