--- a/index.html
+++ b/index.html
@@ -10,32 +10,37 @@
   </head>
   <body>
     <header>
-      <h1>Mighty Ducks Hockey League</h1>
-    </header>
-    <nav>
-      <a href="./">Home</a>
-      <a href="./about.html">About MDHL</a>
-      <a href="./contact.html">Contact</a>
-    </nav>
-    <main>
-      <!-- <aside>
-        <figure>
-          <img src="./assets/hockey1.jpg" alt="Mighty Ducks Hockey League" width="300" />
-        </figure>
-      </aside> -->
-      <div>
-        <h2>Upcoming Events</h2>
-        <img src="./assets/logomdhl.png" alt="Mighty Ducks Logo" width="100" />
+      <div class="banner">
+        <h1>Mighty Ducks Hockey League</h1>
       </div>
+      <div class="subtitle">
+        <h2>Upcoming Events</h2>
+        <figure>
+          <img src="./assets/logomdhl.png" alt="Mighty Ducks Logo" width="150" />
+        </figure>
+      </div>
+    </header>
+    <aside>
+      <nav>
+        <a class="active" href="./">Home</a>
+        <a href="./about.html">About MDHL</a>
+        <a href="./contact.html">Contact</a>
+      </nav>
+    </aside>
+    <main>
       <section>
-        <h3>August 4</h3>
-        <p>MDSL Fundraiser</p>
-        <br />
-        <h3>August 16</h3>
-        <p>Season Kick-off: Meet the Teams</p>
-        <br />
-        <h3>September 1</h3>
-        <p>First Game of the Season (Check Game Schedule for details)</p>
+        <article>
+          <h3>August 4</h3>
+          <p>MDSL Fundraiser</p>
+        </article>
+        <article>
+          <h3>August 16</h3>
+          <p>Season Kick-off: Meet the Teams</p>
+        </article>
+        <article>
+          <h3>September 1</h3>
+          <p>First Game of the Season (Check Game Schedule for details)</p>
+        </article>
       </section>
     </main>
   </body>
