--- a/index.html
+++ b/index.html
@@ -20,16 +20,16 @@
         </figure>
       </div>
     </header>
-    <aside>
+    <div class="sidebar">
       <nav>
         <a class="active" href="./">Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
       </nav>
-    </aside>
+    </div>
     <main>
       <section>
-        <article>
+        <!-- <article>
           <h3>August 4</h3>
           <p>MDSL Fundraiser</p>
         </article>
@@ -40,7 +40,15 @@
         <article>
           <h3>September 1</h3>
           <p>First Game of the Season (Check Game Schedule for details)</p>
-        </article>
+        </article> -->
+        <dl>
+          <dt>August 4</dt>
+          <dd>MDSL Fundraiser</dd>
+          <dt>August 16</dt>
+          <dd>Season Kick-off: Meet the Teams</dd>
+          <dt>September 1</dt>
+          <dd>First Game of the Season (Check Game Schedule for details)</dd>
+        </dl>
       </section>
     </main>
   </body>
