Game information page done!

--- a/contact.html
+++ b/contact.html
@@ -20,13 +20,15 @@
         </figure>
       </div>
     </header>
-    <aside>
+    <div class="sidebar">
       <nav>
         <a href="./">Home</a>
         <a href="./about.html">About MDHL</a>
         <a class="active" href="./contact.html">Contact</a>
+        <a href="./games.html">Games Information</a>
+        <a href="./rules.html">Rules</a>
       </nav>
-    </aside>
+    </div>
     <main>
       <section>
         <article>
