--- a/index.html
+++ b/index.html
@@ -25,6 +25,8 @@
         <a class="active" href="./">Home</a>
         <a href="./about.html">About MDHL</a>
         <a href="./contact.html">Contact</a>
+        <a href="./games.html">Games Information</a>
+        <a href="./rules.html">Rules</a>
       </nav>
     </div>
     <main>
