--- a/contact.html
+++ b/contact.html
@@ -7,6 +7,7 @@
     <title>Mighty Ducks Hockey League</title>
     <meta name="description" content="Contact us - MDHL website" />
     <link rel="stylesheet" type="text/css" href="./styles.css" />
+    <link rel="icon" type="imgae/png" href="./assets/logomdhl.png" />
   </head>
   <body>
     <header>
@@ -32,6 +33,7 @@
     <main>
       <section>
         <article>
+          <h3>Contact us!</h3>
           <p>Please email us at <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a></p>
           <p>We'll reply to your email as soon as we can.</p>
         </article>
